--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 ---
 layout: home
 title: Cindy Huynh
-subtitle: Student at the University of Missouri
+subtitle: Computer Science Student at the University of Missouri
 ---
